--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -19,6 +23,8 @@ android {
     }
 }
 
+def bk_version = '10.1.0'
+def glide_version = '4.9.0'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -26,10 +32,31 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-//butterknife依赖
-    implementation 'com.jakewharton:butterknife:8.0.1'
     //okhttp网络请求依赖
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     //gson解析数据依赖
     implementation 'com.google.code.gson:gson:2.4'
+
+    //----------------- qmui -----------------
+    implementation 'com.qmuiteam:qmui:1.4.0'
+
+    //----------------- butter knife begin -----------------
+    implementation "com.jakewharton:butterknife:$bk_version"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$bk_version"
+    //----------------- butter knife end   -----------------
+
+    // ---- okhttp ----
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    //----------------- matisse图片选择 -----------------
+    implementation 'com.zhihu.android:matisse:0.5.3-beta2'
+    //----------------- glide begin -----------------
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    implementation "com.github.bumptech.glide:okhttp3-integration:$glide_version"
+    //----------------- glide end   -----------------
+    //-----------------gson----------------------------
+    implementation 'com.google.code.gson:gson:2.6.2'
+    //-----------------cardview-----------------------
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
 }
