--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.user.UserActivity" />
+        <activity android:name=".ui.UploadImageActivity" />
     </application>
 
 </manifest>
